--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
